vue初始化状态流程

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,14 @@
 <body>
   <script src="/dist/vue.js"></script>
   <script>
-    const vm = new Vue()
+    const vm = new Vue({
+      data() {
+        return {
+          name: 'f'
+        }
+      }
+    })
+    console.log(vm.name)
   </script>
 </body>
 </html>
