--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,16 @@
     const vm = new Vue({
       data() {
         return {
-          name: 'f'
+          name: 'f',
+          obj: {
+            name: 1,
+            age: 2
+          }
         }
       }
     })
-    console.log(vm.name)
+    console.log(vm)
+    vm.obj = {name: 'd'}
   </script>
 </body>
 </html>
