--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,8 @@
     3. 虚拟dom（说白了就是一个对象）它的好处是可以描述DOM结构，diff算法，可以比对哪些属性变化了哪些属性没有变化，把需要变化的进行更新
     4. 生成真实dom
    -->
-  <div id="app">
-    <div style="color:red;">
-      <span>{{name}}</span>
-    </div>
+  <div id="app" a=1 b=2 style="color:red;font-size:12px;">
+      <span style="color:red;">{{name}} aa {{age}} haha<a>hello</a></span>
   </div>
   <script src="/dist/vue.js"></script>
   <script>
@@ -28,12 +26,13 @@
       el: '#app',
       data() {
         return {
-          name: 'f'
+          name: 'f',
+          age: 18
         } 
       }
     })
 
-    console.log(vm)
+    // console.log(vm)
   </script>
 </body>
 </html>
