数组收集依赖

--- a/public/index.html
+++ b/public/index.html
@@ -20,57 +20,29 @@
     4. 生成真实dom
    -->
   <div id="app" a=1 b=2 style="color:red;font-size:12px;">
-    <span style="color:red;">{{name}} aa {{age}} haha<a>hello</a></span>
+    {{arr1}}
   </div>
+  <!-- {{arr2[0].name}}{{arr2}} -->
   <script src="/dist/vue.js"></script>
   <script>
     const vm = new Vue({
       el: '#app',
       data() {
         return {
-          name: 'f',
-          age: 18,
-          address: ''
+          // 情况一 内部会给arr1这个属性增加依赖，但是我们更改数组时不会去通知更新
+          // arr1: [1, 2, 3],
+          // 情况二 外层数组进行了依赖收集，但是里层数组还没有进行依赖收集
+          arr1:[[1, 2, 3]]
+          // arr2: [{name: 'f'}]
         }
       }
     })
-
-    // console.clear()
-
-    // 修改了数据后，手动调用_update方法更新dom
-    vm.name = 'dd'
-    vm._update(vm._render()) // 强制更新的方法，但是我们希望数据变化后可以自动更新视图，而不是手动触发
-
-    // 在这里取值，没有依赖模板，所以不需要收集依赖
-    vm.address
-
     setTimeout(() => {
-      console.clear()
-      // 1.测试批量更新
-      vm.name = '1'
-      vm.name = '2'
-      vm.name = '3'
-      // 2.修改完成后立刻获取真实dom，结果和我们想象的不一样  因为我们更新的操作是异步的
-      // console.log(vm.$options.el.innerHTML)
-      // 使用setTimeout来获取更新后的结果
-      // setTimeout(() => {
-      //   console.log(vm.$options.el.innerHTML)
-      // })
-      // 使用nextTick获取更新后的结果
-      vm.$nextTick(() => {
-        console.log(vm.$options.el.innerHTML)
-      })
-      vm.name = '4'
-      vm.name = '5'
-    }, 5000)
-
-    // console.log(vm)
-    /* 
-    1. 默认渲染时会将渲染watcher放到Dep.target上
-    2. 当我们调用this.getter时就会对属性进行取值操作
-    3. 让Dep.target值为空，不在模板中访问的值不记录watcher
-    4. 修改name值，会找到name对应的dep，通知dep中的watcher执行
-    */
+      // vm.arr1.push(4)
+      vm.arr1[0].push(4)
+      // _s(xx)里使用了JSON.stringify，所以改变页面会变化
+      // vm.arr2[0].name = 'dd'
+    }, 1000);
   </script>
 </body>
 
