修改new Vue中的components组件

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,9 @@
     const vm = new Vue({
       el: '#app',
       components: {
-        template: `<button>按钮2</button>`
+        'my-button': {
+          template: `<button>按钮2</button>`
+        }
       }
     })
   </script>
