--- a/public/index1.html
+++ b/public/index1.html
@@ -7,15 +7,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <div id="app">
     <my-button></my-button>
   </div>
   <script src="/dist/vue.js"></script>
   <script>
+    // Vue.component 原理 内部使用 Vue.extend API， 这个 API 会返回一个通过对象创建的类，我们可以通过这个类创建一个组件去使用 
+    // 如果没有手动调用Vue.extend方法，会自动调用
     Vue.component('my-button', {
       template: '<button>按钮1</button>'
     })
+    /*
+    等价于下面 
+    Vue.component('my-button', Vue.extend({
+      template: '<button>按钮1</button>'
+    }))
+    */
+
+    // const Sub = Vue.extend({
+    //   template: '<button>按钮2</button>'
+    // })
+
+    // Sub.component('aa', {})
+
+    // 先查找自己身上是否有这个组件，如果没有查找父亲的
     const vm = new Vue({
       el: '#app',
       components: {
@@ -24,11 +41,6 @@
         }
       }
     })
-    /* 
-    1. 调用 Vue.component的时候会调用Vue.extend方法，把对象变成一个构造函数（生成子类的构造函数）
-    2. 如果是组件添加了 init hook() 还添加了componentOptions
-    3. 创建真实节点的时候，会调用 init 钩子，这个 init 方法会做一个初始化操作，new Ctor，当我们去 new 的时候会产生一个组件实例，然后调用$mount方法进行挂载操作，内部会再给组件添加一个 watcher，所以每个组件都有一个自己的 watcher，会将渲染的节点放到当前实例上并返回
-    */
   </script>
 </body>
 
